<resources>
    <string name="app_name">Cerveau Royal</string>
    <string name="title_cerveau">Cerveau</string>
    <string name="title_royale">Royale</string>
    <string name="title_sign">Sign</string>
    <string name="title_up">Up</string>
    <string name="account_email">Email</string>
    <string name="account_password">Password</string>
    <string name="account_login">Login</string>
    <string name="account_signup">Sign Up</string>
    <string name="account_confirmPasswor">Confirm password</string>
    <string name="account_nickname">Nickname</string>
    <string name="index_startgame">Start\n Game</string>
    <string name="startgame_startgame">Start game</string>
    <string name="index_friends">Friends</string>
    <string name="title_choose">Choose</string>
    <string name="title_subject">Subject</string>
    <string name="subject_geography">Geography</string>
    <string name="subject_literature">Literature</string>
    <string name="subject_math">Math</string>
    <string name="subject_history">History</string>
    <string name="subject_art">Art</string>
    <string name="subject_music">Music</string>
    <string name="subject_english">English</string>
    <string name="subject_commonsense">CommonSense</string>
    <string name="title_V">V</string>
    <string name="title_S">S</string>
    <string name="account_logout">Log Out</string>
    <string name="winner_tryAgain">Try again!</string>
    <string name="winner_leave">Leave</string>
    <string name="player1_nom">DeadPool</string>
    <string name="player2_nom">Random</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="wait">Waiting for your opponent....</string>
    <string name="cancel">Cancel</string>
    <string name="add_friend">Add friend</string>
    <string name="challenger">Challenger</string>
    <string name="accpet">Accept</string>
    <string name="escape">Escape</string>
    <string name="ok">Ok</string>
    <string name="enter_email">Enter your firend\'\s Email:</string>

</resources>
